[package]
name = "experiments"
version = "0.1.0"
authors = ["Harry  Barber <hlbarber93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { package="cauchy-consensus", git = "https://github.com/cauchy-team/cauchy-consensus" }
actix = "0.8.3"
rand = "0.7.2"
futures = "0.1.25"
