[package]
name = "experiments"
version = "0.1.0"
authors = ["Harry  Barber <hlbarber93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { package="cauchy-consensus", git = "https://github.com/cauchy-team/cauchy-consensus" }
actix-rt = "1.0.0"
actix = "0.9.0"
kernel_density = "0.0.1"
rand = "0.7.2"
futures = "0.3.1"
termion = "1.5.4"
tui = "0.8.0"
